# parallel_computing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Ngrams Cinquilli-Giannini.doc  a.out  cmake_install.cmake  example.txt  main.cpp  mainOMP.cpp  mainSeq.cpp  output.txt
analyze/: promessi sposi.txt
kmeans/: a_bit_less_data.csv  airline-safety.csv  data_100_6.csv  data_10_000_6.csv  data_1_000_6.csv  datasetProva.csv  datasetProvaOioi.csv  test_reale.csv
kmeans/kmeansCpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kmeans.cpp  kmeans.cu  kmeansSeq  output.txt
kmeans/src/: Common.java  KMeanExecutor.java  Kmeans.java  KmeansND.java  KmeansPar.java  Main.java  MainWithPool.java  MainWithThreads.java
ngrams-src/: main.cpp
ngrams-src/analyze/: orlando furioso.txt
